# tg_content_factory

./: .coverage  .dockerignore  .env.example  .gitignore  .importlinter  .test_durations  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  README.md  README.ru.md  RELEASE_NOTES.md  config.yaml  conftest.py  coverage.json  coverage_final.json  coverage_new.json  coverage_parallel.json  docker-compose.yml  mkdocs.yml  pattaya.xlsx  pyproject.toml
.beads/: export-state.json  interactions.jsonl  issues.jsonl  last-touched
.beads/backup/: backup_state.json  manifest
.codex-staging/feature-dev/: README.md  SKILL.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/release-metadata/: README.md  v0.1.10.json  v0.1.12.json  v0.1.13.json  v0.1.14.json  v0.1.15.json  v0.1.16.json  v0.1.17.json  v0.1.19.json  v0.2.0.json  v0.2.1.json  v0.2.2.json  v0.2.3.json
.github/scripts/: render_release.py
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  langchain-tests.yml  real-provider.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
ai_detect_tool/: README.md  ai_detect.py  ai_detect_audit.py  ai_detect_eval.py  channel_eval.py  channel_eval_session.OLD.json  channel_features.py  channel_rating.csv  channel_survey.csv  channel_survey.py  channel_survey_all.csv  filter_suspects.csv  human_eval.py  human_eval_session.json  post_dedup.csv  post_dedup.py
ai_detect_tool/eval/: ai_samples.txt  human_samples.txt
data/: deepagents_model_compatibility_catalog.json
docs/: architecture.md  feature-map.md  index.md  langchain.md  parity-matrix.md  providers.md  semantic-search.md
docs/features/: agent.md  analytics.md  channels.md  collection.md  dialogs.md  filters.md  my-telegram.md  notifications.md  overview.md  photo-loader.md  pipelines.md  scheduler.md  search.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/operators/: scheduler.md  sso-session-transfer.md
docs/plans/: csrf-starlette-csrf-investigation.md  zai-provider-support.md
docs/reference/: agent-tools.md  cli.md  doc-coverage.md  parity.md  rss-feeds.md  web-api.md
docs/testing/: cli-dangerous.md  real-telegram.md  web-coverage-plan-extended.md  web-coverage-plan.md
pull_requests/: 38_review.md
scripts/: code_health.py  detect_reinvented.py  doc_coverage.py  reinvented_baseline.json  release_pypi.sh  verify_refactor_ast_equivalence.py
src/: collection_queue.py  config.py  database.py  live_runtime_pause.py  main.py  models.py  parsers.py  settings_utils.py
src/agent/: adk_backend.py  codex_backend.py  context.py  manager.py  models.py  permission_gate.py  prompt_template.py  provider_registry.py  react_agent.py  runtime_context.py  tools.py  zai_errors.py
src/cli/: dotenv.py  graph_builder.py  graph_viz.py  main.py  node_dsl.py  parser.py  process_control.py  runtime.py  typer_app.py  typer_commands.py
src/database/: __init__.py  bundles.py  connection.py  facade.py  live_accounts.py  migrations.py  pool.py  schema.py
src/filters/: analyzer.py  criteria.py  models.py
src/runtime/: worker.py
src/scheduler/: manager.py  service.py
src/search/: ai_search.py  engine.py  local_search.py  numpy_semantic.py  persistence.py  telegram_search.py  transformers.py
src/security/: __init__.py  session_cipher.py
src/services/: __init__.py  ab_testing_service.py  account_availability.py  account_service.py  agent_provider_service.py  channel_analysis_service.py  channel_analytics_service.py  channel_onboarding.py  channel_service.py  collection_service.py  content_analytics_service.py  content_calendar_service.py  content_generation_service.py  draft_notification_service.py  embedding_service.py  error_recovery_service.py  export_service.py  filter_deletion_service.py  generation_service.py  image_generation_service.py  image_provider_service.py  jobs_read_model.py  keyword_service.py  langchain_adapters.py  notification_matcher.py  notification_service.py  notification_target_service.py  photo_auto_upload_service.py  photo_publish_service.py  photo_task_service.py  pipeline_executor.py  pipeline_filters.py  pipeline_llm_requirements.py  pipeline_refs.py  pipeline_result.py  pipeline_service.py  pipeline_templates_builtin.py  production_limits_service.py  provider_adapters.py  provider_model_cache.py  (+18 more)
src/telegram/: account_lease_pool.py  auth.py  backends.py  botfather.py  client_pool.py  collector.py  collector_message_parse.py  collector_resolve.py  collector_types.py  flood_wait.py  identity.py  media.py  mtproto_watchdog.py  notifier.py  pool_dialogs.py  pool_flood.py  pool_lifecycle.py  rate_limiter.py  reactions.py  resolve_guard.py  session_materializer.py  utils.py
src/utils/: asyncio.py  datetime.py  introspection.py  json.py  safe_logging.py  search_query_chat_filter.py  (+1 more)
tests/: agent_tools_helpers.py  conftest.py  helpers.py  test_ab_testing_service.py  test_account_availability.py  test_account_lease_pool.py  test_account_service.py  test_adk_backend.py  test_agent.py  test_agent_errors.py  test_agent_manager_extra.py  test_agent_manager_runtime_paths.py  test_agent_models.py  test_agent_provider_service.py  test_agent_threads_moderation_runtime_paths.py  test_agent_tool_smoke_contract.py  test_agent_tools.py  test_agent_tools_ab_variants.py  test_agent_tools_accounts.py  test_agent_tools_analytics.py  test_agent_tools_channels.py  test_agent_tools_collection.py  test_agent_tools_deepagents_sync.py  test_agent_tools_dialogs.py  test_agent_tools_filters.py  test_agent_tools_images.py  test_agent_tools_init.py  test_agent_tools_messaging.py  test_agent_tools_messaging_errors.py  test_agent_tools_messaging_extra.py  test_agent_tools_moderation.py  test_agent_tools_my_telegram.py  test_agent_tools_new1.py  test_agent_tools_new2.py  test_agent_tools_new3.py  test_agent_tools_new4.py  test_agent_tools_new5.py  test_agent_tools_notifications.py  test_agent_tools_permissions.py  test_agent_tools_photo_loader.py  (+302 more)
(+592 files in other folders)
