[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-agent"
version = "0.2.2"
description = "Telegram Post Search & Monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Axisrow"}
]
keywords = ["telegram", "search", "monitoring", "telethon", "collector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon==1.42.0",
    "telethon-cli==0.1.1",
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "jinja2==3.1.6",
    "aiosqlite==0.22.1",
    "apscheduler==3.11.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "cryptography==46.0.5",
    "openpyxl==3.1.5",
    "aiohttp==3.13.3",
    "numpy==2.2.6",
    "scikit-learn>=1.4",
    "langdetect==1.0.9",
    "textual[syntax]>=1.0.0",
    "claude-agent-sdk==0.1.52",
    "deepagents==0.4.12",
    "huggingface_hub==0.30.2",
    "langchain==1.2.12",
    "langchain-core==1.2.19",
    "langchain-ollama==1.0.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "httpx==0.28.1",
    "ruff==0.14.13",
    "pytest-cov==7.0.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
docs = ["mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/axisrow/tg_content_factory"
Repository = "https://github.com/axisrow/tg_content_factory"
Issues = "https://github.com/axisrow/tg_content_factory/issues"

[project.scripts]
tg-agent = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/js/*.js",
    "cli/commands/*.tcss",
]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
timeout = 30
addopts = "--dist=loadfile"
filterwarnings = [
    "ignore:Exception ignored in.*_SyncHttpxClientWrapper:pytest.PytestUnraisableExceptionWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:Exception in thread.*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "native_backend_allowed: test intentionally exercises explicit native Telethon allowlist flows",
    "real_tg_safe: opt-in real Telegram API test limited to read-only sandbox scenarios",
    "real_tg_manual: opt-in real Telegram API test for sandbox-only manual scenarios",
    "real_tg_never: test must never request a real Telegram client fixture",
    "telegram_unit: pure unit test that does not verify backend transport wiring",
    "real_materializer: test uses real SessionMaterializer instead of the fake stub",
    "aiosqlite_serial: test must run without xdist parallelism because it exercises aiosqlite-backed database paths",
]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
