[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-agent"
version = "0.2.3"
description = "Telegram Post Search & Monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Axisrow"}
]
keywords = ["telegram", "search", "monitoring", "telethon", "collector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.43.2",
    "telethon-cli>=0.1.1",
    "fastapi>=0.136.3,<0.137",
    "uvicorn[standard]>=0.48.0",
    "jinja2>=3.1.6",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "cryptography>=48.0.0",
    "openpyxl>=3.1.5",
    "aiohttp>=3.13.5",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
    "jieba>=0.42.1",
    "langdetect>=1.0.9",
    "textual[syntax]>=8.2.7",
    "claude-agent-sdk>=0.2.87",
    "deepagents>=0.6.4",
    "huggingface_hub>=1.16.4",
    # Image-generation SDKs (issue #958): the OpenAI/Together/Replicate image
    # adapters use these instead of raw aiohttp. ``openai`` was already in the
    # tree transitively via ``langchain-openai``; pinning it directly makes the
    # dependency explicit. Together's images endpoint is OpenAI-compatible, so it
    # reuses the ``openai`` SDK with a custom ``base_url`` (no heavy ``together``
    # SDK). ``replicate`` is lightweight (httpx + pydantic, both already present)
    # and removes the hand-rolled prediction-polling loop. HuggingFace stays on
    # raw aiohttp on purpose — its SDK returns a PIL.Image (a Pillow dependency)
    # whereas the raw path saves the image/* bytes directly.
    "openai>=2.28.0",
    "replicate>=1.0.7",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "tenacity>=9.1.4",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "orjson>=3.10.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.14",
    "pytest-cov>=7.1.0",
    # Code-health tooling: scripts/code_health.py (radon cc/mi + vulture) and the
    # CI cyclomatic-complexity gate (`--fail-on F`). ruff (above) is the third.
    "radon>=6.0.1",
    "vulture>=2.16",
]
docs = ["mkdocs-material>=9.7.6"]
# Codex SDK image provider + agent backend. Optional: all imports are lazy, so
# without this group the codex provider/backend simply don't register.
codex = ["openai-codex>=0.1.0b2"]
# Google ADK agent backend (Gemini models). Optional: all imports are lazy, so
# without this group the adk backend simply reports itself unavailable.
adk = ["google-adk>=1.16.0"]

[project.urls]
Homepage = "https://github.com/axisrow/tg_content_factory"
Repository = "https://github.com/axisrow/tg_content_factory"
Issues = "https://github.com/axisrow/tg_content_factory/issues"

[project.scripts]
tg-agent = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/js/*.js",
    "cli/commands/*.tcss",
    "database/seeds/*.csv",
]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
anyio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Keep pytest-timeout as a deadlock guard; xdist workers can be CPU-starved on shared dev hosts.
timeout = 120
addopts = "--dist=loadfile"
filterwarnings = ["error"]
markers = [
    "unit: test level — pure logic, no DB/HTTP/real-IO (fast); auto-applied by conftest heuristic",
    "integration: test level — exercises in-process subsystems (SQLite, FastAPI client, dispatchers); auto-applied by conftest heuristic",
    "smoke: fast offline preflight over real project functions (critical paths); curated subset, applied alongside a level marker",
    "native_backend_allowed: test intentionally exercises explicit native Telethon allowlist flows",
    "real_tg_safe: opt-in real Telegram API test with no Telegram-visible mutations",
    "real_tg_mutation_safe: opt-in real Telegram API test for bounded operator-approved Telegram-visible mutations",
    "real_tg_manual: opt-in real Telegram API test for manual/high-risk Telegram-visible scenarios",
    "real_tg_never: test must never request a real Telegram client fixture",
    "telegram_unit: pure unit test that does not verify backend transport wiring",
    "real_materializer: test uses real SessionMaterializer instead of the fake stub",
    "real_provider_smoke: opt-in live provider API smoke test",
    "aiosqlite_serial: test must run without xdist parallelism because it exercises aiosqlite-backed database paths",
    "codex_image_live: opt-in live Codex SDK image generation test; gate: RUN_CODEX_IMAGE_LIVE=1",
    "codex_cli_live: opt-in live Codex CLI smoke (image + agent backend via real MCP); gate: RUN_CODEX_CLI_LIVE=1",
    "e2e: end-to-end browser test using Playwright",
]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
