[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-agent"
version = "0.2.3"
description = "Telegram Post Search & Monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Axisrow"}
]
keywords = ["telegram", "search", "monitoring", "telethon", "collector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.43.2",
    "telethon-cli>=0.1.1",
    "fastapi>=0.136.3,<0.140",
    "uvicorn[standard]>=0.48.0",
    "jinja2>=3.1.6",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    # CLI framework (epic #959, argparse→Typer migration). Typer was already in
    # the tree transitively; pinning it directly makes the dependency explicit
    # for the Wave-0 scaffold (src/cli/typer_app.py). 0.12 is the first release
    # with the modern click 8.x API the scaffold relies on.
    "typer>=0.12.0",
    "cryptography>=48.0.0",
    "openpyxl>=3.1.5",
    "aiohttp>=3.13.5",
    "numpy>=2.4.6",
    "scikit-learn>=1.8.0",
    "jieba>=0.42.1",
    "langdetect>=1.0.9",
    "textual[syntax]>=8.2.7",
    "claude-agent-sdk>=0.2.87",
    "deepagents>=0.6.4",
    "huggingface_hub>=1.16.4",
    # Image-generation SDKs (issue #958): the OpenAI/Together/Replicate image
    # adapters use these instead of raw aiohttp. ``openai`` was already in the
    # tree transitively via ``langchain-openai``; pinning it directly makes the
    # dependency explicit. Together's images endpoint is OpenAI-compatible, so it
    # reuses the ``openai`` SDK with a custom ``base_url`` (no heavy ``together``
    # SDK). ``replicate`` is lightweight (httpx + pydantic, both already present)
    # and removes the hand-rolled prediction-polling loop. HuggingFace stays on
    # raw aiohttp on purpose — its SDK returns a PIL.Image (a Pillow dependency)
    # whereas the raw path saves the image/* bytes directly.
    "openai>=2.28.0",
    "replicate>=1.0.7",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "tenacity>=9.1.4",
    "pybreaker>=1.4.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "orjson>=3.10.0",
    "itsdangerous>=2.2.0",
    # ReDoS guard for user-supplied notification regexes: the `regex` engine's
    # `timeout=` aborts catastrophic backtracking inside its C matching loop,
    # which the stdlib `re` cannot (#1240). Present transitively (dateparser,
    # tiktoken) but declared here because it is now a direct runtime import.
    "regex>=2024.11.6",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.14",
    "pytest-cov>=7.1.0",
    # Code-health tooling: scripts/code_health.py (radon cc/mi + vulture) and the
    # CI cyclomatic-complexity gate (`--fail-on F`). ruff (above) is the third.
    "radon>=6.0.1",
    "vulture>=2.16",
    # Doc-coverage tooling (#1072): scripts/doc_coverage.py wraps interrogate
    # (% of functions/classes/modules with a docstring → documentation debt
    # report). Config in [tool.interrogate] below. NOT dead code — that's
    # vulture above; "no docstring" and "uncalled" are independent signals.
    "interrogate>=1.7.0",
    # Security scans wired into CI static-checks (issue #1053), advisory for now:
    # pip-audit scans installed deps for known CVEs, bandit flags security
    # anti-patterns in src/. Dependabot (.github/dependabot.yml) opens the fix
    # PRs that pip-audit findings point at.
    "pip-audit>=2.7.3",
    "bandit>=1.8.0",
    # Console-error e2e smoke (issue #1014): the opt-in browser walk in
    # tests/e2e/console_smoke.py drives the Playwright Python API directly
    # instead of shelling out to an undeclared `playwright-cli` binary. The
    # browser binaries are installed separately with
    # `playwright install --with-deps chromium`; pytest-playwright pulls in the
    # `playwright` package and the e2e fixtures. The smoke test is gated behind
    # RUN_E2E_CONSOLE_SMOKE=1, runs locally against a `python -m src.main serve`
    # panel, and never runs in the default suite or in CI.
    "playwright>=1.59.0",
    "pytest-playwright>=0.8.0",
]
docs = ["mkdocs-material>=9.7.6", "mkdocstrings[python]>=0.25.0"]
# Codex SDK image provider + agent backend. Optional: all imports are lazy, so
# without this group the codex provider/backend simply don't register.
codex = ["openai-codex>=0.1.0b2"]
# Google ADK agent backend (Gemini models). Optional: all imports are lazy, so
# without this group the adk backend simply reports itself unavailable.
adk = ["google-adk>=1.16.0"]

[project.urls]
Homepage = "https://github.com/axisrow/tg_content_factory"
Repository = "https://github.com/axisrow/tg_content_factory"
Issues = "https://github.com/axisrow/tg_content_factory/issues"

[project.scripts]
tg-agent = "src.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/js/*.js",
    "cli/commands/*.tcss",
    "database/seeds/*.csv",
]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["*.py"]

[tool.ruff.lint]
select = ["ASYNC240", "B", "DTZ", "E", "F", "I", "N", "W"]
ignore = [
    "ASYNC109",  # public timeout= params passed to asyncio.wait_for are intentional
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends", "fastapi.File", "fastapi.Form"]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "boto3",
    "botocore.*",
    "google.adk.*",
    "langdetect",
    "openpyxl",
    "openpyxl.*",
    "sklearn.*",
    "telethon",
    "telethon.*",
    "telethon_cli",
    "telethon_cli.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
anyio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Keep pytest-timeout as a deadlock guard; xdist workers can be CPU-starved on shared dev hosts.
timeout = 120
addopts = "--dist=loadfile"
filterwarnings = ["error"]
markers = [
    "unit: test level — pure logic, no DB/HTTP/real-IO (fast); auto-applied by conftest heuristic",
    "integration: test level — exercises in-process subsystems (SQLite, FastAPI client, dispatchers); auto-applied by conftest heuristic",
    "smoke: fast offline preflight over real project functions (critical paths); curated subset, applied alongside a level marker",
    "native_backend_allowed: test intentionally exercises explicit native Telethon allowlist flows",
    "real_tg_safe: opt-in real Telegram API test with no Telegram-visible mutations",
    "real_tg_mutation_safe: opt-in real Telegram API test for bounded operator-approved Telegram-visible mutations",
    "real_tg_manual: opt-in real Telegram API test for manual/high-risk Telegram-visible scenarios",
    "real_tg_never: test must never request a real Telegram client fixture",
    "telegram_unit: pure unit test that does not verify backend transport wiring",
    "real_materializer: test uses real SessionMaterializer instead of the fake stub",
    "real_provider_smoke: opt-in live provider API smoke test",
    "aiosqlite_serial: test must run without xdist parallelism because it exercises aiosqlite-backed database paths",
    "codex_image_live: opt-in live Codex SDK image generation test; gate: RUN_CODEX_IMAGE_LIVE=1",
    "codex_cli_live: opt-in live Codex CLI smoke (image + agent backend via real MCP); gate: RUN_CODEX_CLI_LIVE=1",
    "e2e: end-to-end browser test using Playwright",
    "slow: test is intrinsically slow (real timers/sleeps that can't be scaled away); excluded from the fast feedback loop with `-m 'not slow'`",
]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Baseline ratchet for the CI coverage gate (issue #1052). Measured combined
# coverage (parallel + serial suites, 9319 tests) is ~91%; the gate sits a few
# points below that so normal branch-coverage jitter between runs can't red CI,
# while still failing on a real regression. The #1024 bug-hunt epic ratchets this
# upward as it adds tests — raise this number, never lower it.
fail_under = 88
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

# Static security analysis config for `bandit -c pyproject.toml -r src` (#1053).
# The CI step (static-checks) runs it advisory (continue-on-error) for now; this
# scopes the scan to src/ and skips the test tree. Findings are triaged into a
# skip-list / `# nosec` here before the step is ever made blocking.
[tool.bandit]
exclude_dirs = ["tests"]

# Doc-coverage (interrogate, #1072). scripts/doc_coverage.py and the advisory
# CI step read this. `fail_under` is a SOFT baseline — a ratchet floor that
# surfaces regressions without forcing a docstring-everything sprint. Raise it
# as coverage climbs. interrogate ignores things that don't need a docstring
# (magic/init/nested/private, overloads).
# Ratchet history: 23 (#1072 floor) → 35 (#1134: documented the public-API
# facade — src/models.py Pydantic models, db.repos bundles, repository CRUD —
# lifting coverage 27% → 40.6%; floor set to 35 to lock in the win with a
# margin below the measured 40.6% so a stray docstring loss doesn't trip the
# gate). Doc-coverage is NOT a CI gate (#1097) — stays a local script.
[tool.interrogate]
fail_under = 35
ignore_init_method = true
ignore_init_module = true
ignore_magic = true
ignore_nested_functions = true
ignore_private = true
ignore_semiprivate = true
ignore_property_decorators = true
ignore_overloaded_functions = true
exclude = ["tests", "scripts", "build", "dist", "site"]
verbose = 1
